@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Class title can now be used in legends. It's value takes precedence over class name. Previously
+  title was not used any place in the code but it is supported for read/write. (#3702)
+
 - Allow definition of nodata attribute for layers without results (via resultset tag). (#3701)
 
 - mapprojhack.c: restructure to avoid needing projects, or any internal 
